# ros2_yehia_learning

./: LICENSE  README.md
actions/action_tutorial/: package.xml
actions/action_tutorial/src/: action_client.cpp  action_server.cpp
actions/action_tutorial_py/: package.xml  setup.py
actions/action_tutorial_py/action_tutorial_py/: action_client.py  action_server.py
amr_robot/amr_bringup/: CMakeLists.txt  package.xml
amr_robot/amr_bringup/config/: bringup_params.yaml
amr_robot/amr_bringup/launch/: bringup.launch.py  mission_bringup.launch.py  nav_bringup.launch.py  slam_bringup.launch.py
amr_robot/amr_controller/: CMakeLists.txt  package.xml  setup.py
amr_robot/amr_controller/amr_controller/: mission_planner.py
amr_robot/amr_controller/config/: mission.yaml
amr_robot/amr_controller/launch/: mission.launch.py
amr_robot/amr_controller/src/: goal_sender.cpp  waypoint_sender.cpp
amr_robot/amr_description/: CMakeLists.txt  package.xml
amr_robot/amr_description/launch/: display.launch.py
amr_robot/amr_description/rviz/: amr_display.rviz
amr_robot/amr_description/urdf/: robot.urdf.xacro
amr_robot/amr_gazebo/: CMakeLists.txt  package.xml
amr_robot/amr_gazebo/launch/: gazebo.launch.py
amr_robot/amr_gazebo/worlds/: amr_world.world
amr_robot/amr_navigation/: CMakeLists.txt  package.xml
amr_robot/amr_navigation/config/: nav2_params.yaml
amr_robot/amr_navigation/launch/: navigation.launch.py
amr_robot/amr_navigation/maps/: amr_map.pgm
amr_robot/amr_slam/: CMakeLists.txt  package.xml
amr_robot/amr_slam/config/: slam_params.yaml
amr_robot/amr_slam/launch/: slam.launch.py
amr_robot/amr_slam/maps/: amr_map.yaml
create_library_with_header/publisher_library/: package.xml
create_library_with_header/publisher_library/include/publisher_library/: timed_publisher.hpp
create_library_with_header/use_library/: CMakeLists.txt  package.xml
create_library_with_header/use_library/src/: use_library.cpp
create_library_with_header_py/publisher_library_py/: setup.cfg  setup.py
create_library_with_header_py/publisher_library_py/publisher_library_py/: timed_publisher.py
create_library_with_header_py/use_library_py/: package.xml  setup.cfg
create_library_with_header_py/use_library_py/use_library_py/: use_library.py
custom_msg_and_srv/: package.xml
custom_msg_and_srv/action/: Concatenate.action
custom_msg_and_srv/msg/: EmployeeSalary.msg
dynamic_tf2_publisher/: CMakeLists.txt  README.md
dynamic_tf2_publisher_py/: setup.cfg  setup.py
dynamic_tf2_publisher_py/dynamic_tf2_publisher_py/: dynamic_tf2_publisher.py
message_sync/: CMakeLists.txt  README.md  package.xml
message_sync_py/: package.xml  setup.py
message_sync_py/message_sync_py/: multi_publisher.py  sync_subscriber.py
parameters/: CMakeLists.txt  README.md
parameters/src/: node_with_params.cpp
parameters_py/: package.xml  setup.py
plugins/: README.md
plugins/vehicle_base/include/vehicle_base/: vehicle_base.hpp
plugins/vehicle_base_py/: setup.cfg
plugins/vehicle_base_py/vehicle_base_py/: vehicle_loader.py
plugins/vehicle_plugins/: CMakeLists.txt  package.xml
plugins/vehicle_plugins/include/vehicle_plugins/: bicycle.hpp  motorbike.hpp  truck.hpp
plugins/vehicle_plugins/src/: bicycle.cpp  motorbike.cpp  truck.cpp
plugins/vehicle_plugins_py/: package.xml  setup.cfg  setup.py
plugins/vehicle_plugins_py/vehicle_plugins_py/: motorbike.py  truck.py
publisher_and_subscriber/: README.md
publisher_and_subscriber/src/: publisher_with_custom_msg.cpp  simple_publisher.cpp  simple_subscriber.cpp  subscriber_with_custom_msg.cpp
publisher_and_subscriber_py/: setup.py
publisher_and_subscriber_py/publisher_and_subscriber_py/: publisher_with_custom_msg.py  simple_publisher.py  simple_subscriber.py  subscriber_with_custom_msg.py
ros2_fundamentals/actions/: README.md
ros2_fundamentals/actions/action_tutorial/: CMakeLists.txt
ros2_fundamentals/create_library_with_header/publisher_library/: CMakeLists.txt
ros2_fundamentals/create_library_with_header/publisher_library/src/: timed_publisher.cpp
ros2_fundamentals/create_library_with_header_py/publisher_library_py/: package.xml
ros2_fundamentals/create_library_with_header_py/use_library_py/: setup.py
ros2_fundamentals/custom_msg_and_srv/: CMakeLists.txt  README.md
ros2_fundamentals/dynamic_tf2_publisher/: package.xml
ros2_fundamentals/dynamic_tf2_publisher/src/: dynamic_tf2_publisher.cpp
ros2_fundamentals/dynamic_tf2_publisher_py/: package.xml
ros2_fundamentals/message_sync/src/: multi_publisher.cpp  sync_subscriber.cpp
ros2_fundamentals/message_sync_py/: README.md  setup.cfg
ros2_fundamentals/parameters/: package.xml
ros2_fundamentals/parameters_py/parameters_py/: node_with_params.py
ros2_fundamentals/plugins/vehicle_base/: CMakeLists.txt  package.xml
ros2_fundamentals/plugins/vehicle_base/src/: vehicle_loader.cpp
ros2_fundamentals/plugins/vehicle_base_py/: package.xml  setup.py
ros2_fundamentals/plugins/vehicle_plugins/: plugins.xml
ros2_fundamentals/publisher_and_subscriber/: CMakeLists.txt  package.xml
ros2_fundamentals/publisher_and_subscriber/src/: simple_publisher.cpp  simple_subscriber.cpp
ros2_fundamentals/publisher_and_subscriber_py/: package.xml
ros2_fundamentals/service_server_and_client/: CMakeLists.txt
ros2_fundamentals/start_with_simple_nodes/: package.xml
ros2_fundamentals/start_with_simple_nodes/src/: my_first_node.cpp
ros2_fundamentals/start_with_simple_nodes_py/start_with_simple_nodes_py/: node_with_timer.py
service_server_and_client/: README.md  package.xml
service_server_and_client/src/: simple_client.cpp  simple_server.cpp
service_server_and_client_py/: package.xml  setup.cfg  setup.py
service_server_and_client_py/service_server_and_client_py/: simple_client.py  simple_server.py
start_with_simple_nodes/: CMakeLists.txt  README.md
start_with_simple_nodes/src/: node_with_timer.cpp
start_with_simple_nodes_py/: README.md  package.xml  setup.py
start_with_simple_nodes_py/start_with_simple_nodes_py/: my_first_node.py
(+2 files in other folders)
