<?xml version="1.0"?>
<package format="3">
  <name>message_sync</name>
  <version>0.0.1</version>
  <description>Message synchronization examples in C++</description>
  <maintainer email="yehiaelkh@gmail.com">Yehia Elkh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>