<?xml version="1.0"?>
<package format="3">
  <name>start_with_simple_nodes_py</name>
  <version>0.0.1</version>
  <description>Simple nodes examples in Python</description>
  <maintainer email="yehiaelkh@gmail.com">Yehia Elkh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>