<?xml version="1.0"?>
<package format="3">
  <name>amr_controller</name>
  <version>0.0.1</version>
  <description>AMR-Y custom navigation controllers</description>
  <maintainer email="yehiaelkh@email.com">Yehia ElKh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>python3-yaml</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
