<?xml version="1.0"?>
<package format="3">
  <name>amr_gazebo</name>
  <version>0.0.1</version>
  <description>AMR-Y Gazebo simulation</description>
  <maintainer email="yehiaelkh@email.com">Yehia ElKh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>amr_description</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>