<?xml version="1.0"?>
<package format="3">
  <name>amr_navigation</name>
  <version>0.0.1</version>
  <description>AMR-Y Nav2 navigation</description>
  <maintainer email="yehiaelkh@email.com">Yehia ElKh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_common</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>amr_description</depend>
  <depend>amr_gazebo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
