<?xml version="1.0"?>
<package format="3">
  <name>use_library</name>
  <version>0.0.1</version>
  <description>Uses the publisher library</description>
  <maintainer email="yehiaelkh@gmail.com">Yehia Elkh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>publisher_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>