<?xml version="1.0"?>
<package format="3">
  <name>vehicle_plugins</name>
  <version>0.0.1</version>
  <description>Concrete vehicle plugin implementations</description>
  <maintainer email="yehiaelkh@gmail.com">Yehia Elkh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>vehicle_base</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>