<?xml version="1.0"?>
<package format="3">
  <name>dynamic_tf2_publisher</name>
  <version>0.0.1</version>
  <description>Dynamic TF2 publisher in C++</description>
  <maintainer email="yehiaelkh@gmail.com">Yehia Elkh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>