<?xml version="1.0"?>
<package format="3">
  <name>dynamic_tf2_publisher_py</name>
  <version>0.0.1</version>
  <description>Dynamic TF2 publisher in Python</description>
  <maintainer email="yehiaelkh@gmail.com">Yehia Elkh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>