<?xml version="1.0"?>
<package format="3">
  <name>start_with_simple_nodes</name>
  <version>0.0.1</version>
  <description>Simple nodes examples in C++</description>
  <maintainer email="yehiaelkh@gmail.com">Yehia Elkh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>